<resources>
    <string name="app_name">Repartidores</string>


    <string name="TokenVipla">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenColombia">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenPesbac">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenVazquin">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenBPR">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenGuvi">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenAutodis">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenCecra">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenHazak">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenPressa">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>
    <string name="TokenAutotop">AIzaSyC6u34cq2ZCBGyTicAa__hScUwcN01zVXE</string>





    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="v_1_0">V 1.21</string>
    <string name="name_repartidores">Nombre del repartidor</string>
    <string name="seleccione"> Selecione su empresa</string>


    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Paquetes por entregar</string>

    <string name="menu_entregamostrador">Mostrador</string>
    <string name="menu_slideshow">Paquetes entregados</string>
    <string name="menu_mapa">Mapa</string>
    <string name="cerrarsesion">Cerrar Sesion</string>
    <string name="dialog_hint">Folio</string>
    <string name="signin">Regresar</string>
    <string name="escanearfolio">Escanear Folio</string>
    <string name="escribirFolio">Escribir Folio</string>
    <string name="titleescfolio">introduce folio</string>
    <string name="agregarfoio">Guardar</string>
    <string name="escibirotrofolio">añadir</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="run">Cargando...</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_mapsolo">mapsolo</string>
    <string name="title_activity_maps_solo">MapsSolo</string>
    <string name="title_activity_maps_todos">MapsTodos</string>

</resources>

