<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajatextfolio"
        android:hint="@string/dialog_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:id="@+id/guardarfolio"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/agregarfoio"
        />

        <Button
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:id="@+id/agregarotro"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:text="@string/escibirotrofolio"
            />

    </LinearLayout>

</LinearLayout>