<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kepler.respartidores01.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.kepler.respartidores01.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.kepler.respartidores01.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/mapsActivity"
        android:name="com.kepler.respartidores01.MapsActivity"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" />

    <activity
        android:id="@+id/cerrarsecion"
        android:name="com.kepler.respartidores01.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main"/>

</navigation>