<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo"
                tools:ignore="ImageContrastCheck"
                app:srcCompat="@drawable/autodis"
                />
            <Spinner
                android:id="@+id/spinerempresas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ColorRojoTenue"
                android:minHeight="48dp"
                android:prompt="@string/seleccione"
                android:spinnerMode="dialog"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="150dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="bottom">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:maxLines="1"
                android:hint="@string/usuario"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="18">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinUsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="18"
                    android:textColorHint="#757575"
                    android:textSize="15sp"
                    android:drawableStart="@drawable/ic_us"
                    android:drawablePadding="5dp"
                    tools:ignore="TextContrastCheck"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:hint="@string/password"
                android:maxLines="1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:passwordToggleEnabled="true"
                app:startIconTint="@null"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinCla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="#757575"
                    android:textSize="15sp"
                    android:drawableStart="@drawable/ic_action_candado"
                    android:drawablePadding="3dp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnbuscar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/roundbutton"
                android:text="@string/ingresar"
                android:onClick="sendMessage"
                android:drawableEnd="@drawable/ic_ingresar"
                />


        </LinearLayout>


    </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/ColorRojoTenue"
        android:orientation="vertical">

       <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ColorRojoTenue"
            android:text="@string/v_1_0"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:textStyle="bold|italic"
            android:layout_gravity="right"
            android:paddingRight="15dp"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
